# pipeline_langgraph

./: README.md  basic.ipynb  conditional.ipynb  db_agent.ipynb  house_prices.db  iteration.ipynb  job_hunter.ipynb  main.py  parallel.ipynb  pyproject.toml  seq_maths_graph.ipynb
data/: house_price.csv
projects/: conditional.ipynb  db_agent.ipynb  parallel.ipynb  sequential.ipynb
