[project]
name = "pipeline-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.12.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.4",
    "langsmith[claude-agent-sdk]>=0.7.23",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "sendgrid>=6.12.5",
    "sqlalchemy>=2.0.49",
]
